--- a/.travis.yml
+++ b/.travis.yml
@@ -20,18 +20,14 @@ before_script:
 
 script:
   # Check coding style
-  - git format-patch -1 --stdout | $DST_KERNEL/scripts/checkpatch.pl --ignore FILE_PATH_CHANGES --ignore GERRIT_CHANGE_ID -
+  - git format-patch -1 --stdout | ./scripts/checkpatch.pl --ignore FILE_PATH_CHANGES --ignore GERRIT_CHANGE_ID -
 
   # arm32 compilation
   - export ARCH=arm
   - export CROSS_COMPILE=arm-linux-gnueabihf-
   - echo "CONFIG_IPIPE=y" >> arch/arm/configs/sunxi_defconfig
+  - echo "CONFIG_IPIPE=y" >> arch/arm/configs/multi_v7_defconfig
   - make sunxi_defconfig
   - make -j`getconf _NPROCESSORS_ONLN` zImage
-  
-  # arm64 compilation
-  - export ARCH=arm64
-  - export CROSS_COMPILE=aarch64-linux-gnu-
-  - rm -f .config
-  - make defconfig
-  - make -j`getconf _NPROCESSORS_ONLN` all
+  - make multi_v7_defconfig
+  - make -j`getconf _NPROCESSORS_ONLN` zImage
